gccida/g1/gen_type_die_for_member
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die_for_member/src/dwarf2out.c:10583:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10121, "gen_type_die_for_member"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die_for_member/src/dwarf2out.c:10591:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9553, "pop_decl_scope"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die_for_member/src/obj/dwarf2out.o] Error 1
